# mlpost

./: .pre-commit-config.yaml  README.md  dev.publish  dev.publish.py  publish.py  pyproject.toml
.github/workflows/: ci.yml
blog-posts/name-of-your-blog-post/: name-of-your-blog-post.md
post-template/: post.json  post.md
